# Practice

./: games_store.db  main.py  pyproject.toml  site.html
.github/workflows/: build.yml  build_flet.yml
