[project]
name = "zpay-games-store"
version = "0.1.1"
description = "Десктопное приложение для управления магазином игр и бизнес-аналитики"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ZAHAR22", email = "luninzahar@gmail.com" }]
dependencies = ["flet>=0.21.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]

[project.scripts]
zpay-games = "main:main"

[tool.poetry]
name = "zpay-games-store"
version = "0.1.0"
description = "Десктопное приложение для управления магазином игр и бизнес-аналитики"
authors = ["ZAHAR22 <luninzahar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.21.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.3.0"

[tool.flet]
product = "ZPay Games Store"
company = "ZPay"
copyright = "Copyright (C) 2026 ZPay"
org = "com.zpay"
icon = "assets/icon.png"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
