[project]
name = "zpay-games-store"
version = "0.1.2"
description = "Десктопное приложение для управления магазином игр и бизнес-аналитики"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ZAHAR22", email = "luninzahar@gmail.com" }]
dependencies = ["flet>=0.21.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]

[project.scripts]
zpay-games = "main:main"

[tool.flet]
product = "ZPay Games Store"
company = "ZPay"
copyright = "Copyright (C) 2026 ZPay"
org = "com.zpay"
icon = "assets/icon.png"
